# Updater

./: .gitignore  CMakeLists.txt  Makefile  config.yml  main.cpp
.github/workflows/: cmake-single-platform.yml
include/: cache.h  server.h  types.h
include/api_wrapper/: github_api.h
include/core/: cache.h  server.h
include/include/: types.h
include/include/api_wrapper/: github_api.h  wrapper.h
include/include/core/: cache.h  server.h
include/include/user_interface/: ansi.h  output.h
include/include/utils/: curl.h  file_utils.h  json_utils.h  zip_utils.h
include/user_interface/: input.h  output.h
include/utils/: curl_utils.h  file_utils.h  json_utils.h  yaml_utils.h  zip_utils.h
src/: main.cpp
src/api_wrapper/: github_api.cpp  wrapper.cpp
src/core/: cache.cpp  server.cpp
src/utils/: curl.cpp  curl_utils.cpp  file_utils.cpp  json_utils.cpp  zip_utils.cpp
